// protoc -I=. -I=$GOPATH/src --go_out=plugins=grpc:. *.proto
syntax = "proto3";

package dtalk.record;
option go_package = "github.com/txchat/dtalk/service/record";

// record --> mq
message PushMsg {
  string appId = 1;
  string fromId = 2;
  int64  mid = 3;
  string key = 4;
  string target = 5;  //推送目标 用户id 或者 群id
  bytes msg = 6;
  int32 type = 7;
  string frameType = 8;
}

enum Operation {
  BatchPush = 0;
  MarkRead = 1;
  StoreMsg = 2;
  SyncMsg = 3;
}

// record --> mq
message RecordDeal {
  string appId = 1;
  string fromId = 2;
  string key = 3;
  Operation opt = 4;
  bytes msg = 5;
}

//Operation=MarkRead
message Marked {
  string type = 1;
  repeated int64 mids = 2;
}

//Operation=SyncMsg
message Sync {
  int64 mid = 1;
}
